// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders Tooltip aligned left unchanged 1`] = `
<div>
  <div
    class="memori-tooltip memori-tooltip--align-left memori-tooltip--visible memori-tooltip--portal-open"
  >
    <div
      class="memori-tooltip--trigger"
    >
      Hover me
    </div>
  </div>
</div>
`;

exports[`renders Tooltip aligned right unchanged 1`] = `
<div>
  <div
    class="memori-tooltip memori-tooltip--align-right memori-tooltip--visible memori-tooltip--portal-open"
  >
    <div
      class="memori-tooltip--trigger"
    >
      Hover me
    </div>
  </div>
</div>
`;

exports[`renders Tooltip aligned top left unchanged 1`] = `
<div>
  <div
    class="memori-tooltip memori-tooltip--align-topLeft memori-tooltip--visible memori-tooltip--portal-open"
  >
    <div
      class="memori-tooltip--trigger"
    >
      Hover me
    </div>
  </div>
</div>
`;

exports[`renders Tooltip aligned top right unchanged 1`] = `
<div>
  <div
    class="memori-tooltip memori-tooltip--align-topRight memori-tooltip--visible memori-tooltip--portal-open"
  >
    <div
      class="memori-tooltip--trigger"
    >
      Hover me
    </div>
  </div>
</div>
`;

exports[`renders Tooltip disabled unchanged 1`] = `
<div>
  <div
    class="memori-tooltip memori-tooltip--align-right memori-tooltip--disabled"
  >
    <div
      class="memori-tooltip--trigger"
    >
      Hover me
    </div>
  </div>
</div>
`;

exports[`renders Tooltip unchanged 1`] = `
<div>
  <div
    class="memori-tooltip memori-tooltip--align-right"
  >
    <div
      class="memori-tooltip--trigger"
    >
      Hover me
    </div>
  </div>
</div>
`;

exports[`renders Tooltip visible unchanged 1`] = `
<div>
  <div
    class="memori-tooltip memori-tooltip--align-right memori-tooltip--visible memori-tooltip--portal-open"
  >
    <div
      class="memori-tooltip--trigger"
    >
      Hover me
    </div>
  </div>
</div>
`;

exports[`renders Tooltip with jsx content unchanged 1`] = `
<div>
  <div
    class="memori-tooltip memori-tooltip--align-right"
  >
    <div
      class="memori-tooltip--trigger"
    >
      Hover me
    </div>
  </div>
</div>
`;
